get_abs_u added

--- a/todo_list/todo/templates/todo/actions.html
+++ b/todo_list/todo/templates/todo/actions.html
@@ -10,7 +10,7 @@
 
 {% for obj in objs %}
     <ul>
-        <li><a href="{% url 'todo' slug=obj.slug %}">{{ obj }}</a></li>
+        <li><a href="{{ obj.get_absolute_url }}">{{ obj }}</a></li>
     </ul>
 {% endfor %}
 {% endblock %}
